fixes warping images on mobile

--- a/src/Components/swiper/CenteredSwiper.scss
+++ b/src/Components/swiper/CenteredSwiper.scss
@@ -34,7 +34,7 @@
     // width: 1000px;
     max-width: 100%;
     max-height: 100%;
-    // object-fit: cover;
+    object-fit: contain;
     border-radius: 5px;
 }
 
